<resources>
    <string name="app_name">SkeletonApp</string>
    <string name="SerializableActivity4Result">Serializable式传递对象</string>
    <string name="ParcelableActivity4Result">Parcelable式传递对象</string>
    <string name="CustomControl4Title">自定义控件</string>
    <string name="title_activity_custom_control4_title">CustomControl4Title</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_text">Title Text</string>
    <string name="listview">ListView用法</string>

    <string name="recyclerview">RecyView</string>
    <string name="rvvert">横向</string>
    <string name="rvWaterfallView">瀑布流</string>
    <string name="uipractice">综合应用</string>
    <string name="frag_btn">Fragment</string>
    <string name="bc_std">标准</string>
    <string name="bc_ord">有序</string>
    <string name="bc_lcl">本地</string>
    <string name="bc_cut">自定义</string>
    <string name="bc_eg">广播实例：强制下线</string>
    <string name="title_activity_bc_login">BcLoginActivity</string>
</resources>